Temporal Press fixes, queue features, & small UI changes (#66)
* Fix Temporal Presses consuming energy after reset

* Don't call getPricesMultiple multiple times

* Write a faster function to get multiple TC shatter prices

* Remove lag in the time tab from having lots of Temporal Presses

* Simplify getPrices for shattering 1 TC at a time

* Fix Temporal Press carryover not properly limited by 1kY completions

* Fix Temporal Press not updating custom shatter link handler

* Remove queue itemType label, turn items red if storage limited, fix incorrect caption

* Make red queue items respect the game settings

* Don't gray out completed Challenges

* Fix a bug where custom shatter link was visible when it wasn't supposed to be

* Fix necrocorn per day being affected by Tempus Fugit

* Clarify that synergies care about active AI cores, not AI level

* Holding SHIFT no longer squares the active HGs as shown in the tooltip

* Add test suite for bulk TC shatter prices

* Fix math error with bulk shatter TC prices

* Rewrite queue logic to not have setState in componentDidUpdate

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1561,7 +1561,7 @@
     "space.rorschachMission.label": "Rorschach",
     "space.mission.rorschach.complete.log.msg": "Rorschach is impenetrable but you see farther now.",
     "space.terminusMission.label": "T-minus Mission",
-    "space.terminusMission.desc": "Terminus is a supermassive ice giant at the far end of a Helios solar system.",
+    "space.terminusMission.desc": "Terminus is a supermassive ice giant at the far end of Cath's solar system.",
     "space.umbraMission.label": "Umbra Mission",
     "space.umbraMission.desc": "Umbra is a supermassive black hole at the heart of the Helios system",
     "space.yarnMission.label": "Yarn Mission",
@@ -2291,7 +2291,7 @@
     "workshop.mWReactor.label": "Microwarp Reactors",
     "workshop.mWReactor.desc": "A new eludium-based reactor for Lunar Outposts. Unobtainium production is 75% more effective.",
     "workshop.machineLearning.label": "Machine Learning",
-    "workshop.machineLearning.desc": "Every level of AI Core will increase Data Center effectiveness by 10%",
+    "workshop.machineLearning.desc": "Every active AI Core will increase Data Center effectiveness by 10%",
     "workshop.mineralAxes.label": "Mineral Axe",
     "workshop.mineralAxes.desc": "Woodcutters are 70% more effective",
     "workshop.mineralHoes.label": "Mineral Hoes",
