Unicorn Tears Challenge changes the prices of items in the Bonfire & Workshop tabs

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -380,6 +380,7 @@
     "effectsMgr.statics.blsCorruptionRatio.title": "BLS corruption bonus",
     "effectsMgr.statics.blsLimit.title": "Max BLS",
     "effectsMgr.statics.blsProductionBonus.title": "BLS production bonus",
+    "effectsMgr.statics.bonfireTearsPriceRatioChallenge.title": "Bonfire price ratio",
     "effectsMgr.statics.boostFromLeader.title": "Boost From Leader",
     "effectsMgr.statics.breweryConsumptionRatio.title": "Brewery consumption ratio",
     "effectsMgr.statics.breweryPolicyManpowerRatio.title": "Brewery catpower bonus",
@@ -610,6 +611,7 @@
     "effectsMgr.statics.warehouseRatio.title": "Warehouse expansion",
     "effectsMgr.statics.weaponEfficency.title": "Weapon efficiency",
     "effectsMgr.statics.woodJobRatio.title": "Woodcutter tools",
+    "effectsMgr.statics.workshopTearsPricesChallenge.title": "Workshop tears prices",
     "effectsMgr.statics.zebraAppeasedGoldPenalty.title" : "Gold penalty",
     "effectsMgr.statics.zebraPreparations.title": "Zebra Preparation",
     "effectsMgr.statics.zebraRelationModifier.title" : "Zebra relations modifier",
