Add achievement for Challenge completions.

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -12,6 +12,9 @@
     "achievements.cathammer.title": "Cathammer 40K",
     "achievements.cathammer.desc": "In the grim and dark future of a catkind",
     "achievements.cathammer.starDesc": "In the grim and dark future of a catkind there are no resets",
+    "achievements.challenger.title": "Challenger",
+    "achievements.challenger.desc": "Complete 5 unique challenges.",
+    "achievements.challenger.starDesc": "Complete a total of 100 challenges.",
     "achievements.deadSpace.title": "Dead Space",
     "achievements.deadSpace.desc": "In space no one can hear you meow.",
     "achievements.eternalBacchanalia.title": "Eternal Bacchanalia",
