New achievements & basges (#71)
* Add flag to track if the current run was started without benefit of Chronospheres

* Add silly things that happen if the player shatters 500 TCs during a temporal paradox.

* Add a bunch of new achievements & basges

* Don't count unethical starred achievements

* Update the achievements panel live whenever anything changes.

* Update badges panel live whenever anything changes.

* Make the basges panel much more readable

* Silly formatting for some basges

* Make Fantastic Fur Color work in all color themes & fix issue with current leader overlapping their own crown.

* Add achievement for Challenge completions.

* Achievements UI improvement: Handle text overflow cleanly (usually using ellipses).

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -12,8 +12,14 @@
     "achievements.cathammer.title": "Cathammer 40K",
     "achievements.cathammer.desc": "In the grim and dark future of a catkind",
     "achievements.cathammer.starDesc": "In the grim and dark future of a catkind there are no resets",
+    "achievements.challenger.title": "Challenger",
+    "achievements.challenger.desc": "Complete 5 unique challenges.",
+    "achievements.challenger.starDesc": "Complete a total of 100 challenges.",
     "achievements.deadSpace.title": "Dead Space",
     "achievements.deadSpace.desc": "In space no one can hear you meow.",
+    "achievements.eternalBacchanalia.title": "Eternal Bacchanalia",
+    "achievements.eternalBacchanalia.desc": "The celebration of the century.",
+    "achievements.eternalBacchanalia.starDesc": "Organize a mega-event.",
     "achievements.heartOfDarkness.title": "Heart Of Darkness",
     "achievements.heartOfDarkness.desc": "Become the chieftain of a zebra tribe. (How is this even possible?)",
     "achievements.hundredYearsSolitude.title": "One Hundred Years of Solitude",
@@ -22,6 +28,7 @@
     "achievements.ironWill.desc": "You truly deserved this",
     "achievements.jupiterAscending.title": "Jupiter Ascending",
     "achievements.jupiterAscending.desc": "Get to space on the first year",
+    "achievements.jupiterAscending.starDesc": "Get to space on the first year without using Chronospheres",
     "achievements.limitlessClicker.title": "Limitless Clicker",
     "achievements.limitlessClicker.desc": "Accumulate 100,000 clicks.",
     "achievements.limitlessClicker.starDesc": "Accumulate 1,000,000 clicks.",
@@ -30,8 +37,11 @@
     "achievements.meowMeowRevolution.title": "Meow Meow Revolution",
     "achievements.meowMeowRevolution.desc": "Construct a factory in Iron Will mode",
     "achievements.panel.label":"Achievements",
+    "achievements.sadnessAbyss.title": "Sadness Abyss",
+    "achievements.sadnessAbyss.desc": "The source of melancholy",
     "achievements.serenity.title": "Serenity",
     "achievements.serenity.desc": "Have 50 kittens without losing any of them",
+    "achievements.serenity.starDesc": "Have 1000 kittens without losing any of them",
     "achievements.shadowOfTheColossus.title": "Shadow Of The Colossus",
     "achievements.shadowOfTheColossus.desc": "Build a Ziggurat having only one kitten",
     "achievements.sinsOfEmpire.title": "Sins of a Solar Empire",
@@ -58,10 +68,13 @@
     "achievements.utopiaProject.title": "Utopia Project",
     "achievements.utopiaProject.desc": "Get a total happiness of over 150%",
     "achievements.utopiaProject.starDesc": "Get a total happiness of over 500%",
+    "achievements.veryLargeArray.title": "Very Large Array",
+    "achievements.veryLargeArray.desc": "Build 100 Observatories without SETI",
     "achievements.winterIsComing.title": "Winter Is Coming",
     "achievements.winterIsComing.desc": "Have 10 kittens dead",
     "achievements.youMonster.title": "You Monster",
     "achievements.youMonster.desc": "Poor kittens.",
+    "achievements.youMonster.starDesc": "Serial murderer",
     "achievements.deathStranding.title": "Death Stranding",
     "achievements.deathStranding.desc": "Reach Furthest Ring",
 
@@ -69,6 +82,7 @@
 
     "badges.header": "Basges: {0} out of {1}",
     "badges.panel.label": "Basges",
+    "badges.whatYearIsIt.get": "The Temporal Paradox has forcefully been resolved, +{0} void!",
 
     "bld.msg.automation": "Activating workshop automation",
     "bld.msg.automation.beams": "Spent {0} wood, +{1} beams!",
