Census improvements: Better filtering, rendering improvements, render live-updates, fix bugs, promote individual kittens, bulk mass promote

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1899,11 +1899,20 @@
     "village.census.age": "years old",
     "village.census.crafting": "Crafting: ",
     "village.census.crafting.nothing": "Nothing",
+    "village.census.exp.desc": "Kittens earn exp by working.",
+    "village.census.exp.notready": "Not enough exp to do anything special.",
+    "village.census.exp.ready": "You can spend some exp and gold to promote this kitten.",
     "village.census.filter.all": "All jobs",
+    "village.census.filter.unemployed": "Jobless",
     "village.census.lbl.festival.duration": "Festival duration",
     "village.census.lbl.happiness": "Happiness",
     "village.census.lbl.leader": "Leader",
+    "village.census.btn.favorite": "Favorite kitten",
+    "village.census.btn.leader": "Make a leader",
+    "village.census.btn.promote": "Promote",
     "village.census.leader.propmote": "Promote ({0} exp, {1} gold)",
+    "village.census.no.kittens": "There are no kittens :<",
+    "village.census.no.kittens.filtered": "None of the kittens match this filter.",
     "village.census.page": "Page {0} of {1}",
     "village.census.rank": "rank",
     "village.census.sort.exp": "Sort by Exp",
