--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1220,6 +1220,7 @@
     "resources.slab.title": "slab",
     "resources.sorrow.title": "sorrow",
     "resources.spice.title": "spice",
+    "resources.spice.title.october": "pumpkin spice",
     "resources.starchart.title": "starchart",
     "resources.steel.title": "steel",
     "resources.tMythril.title": "T-Mythril",
@@ -1742,7 +1743,6 @@
     "ui.save.tooltip": "Saved!",
     "ui.energy.tooltip": "Energy",
     "ui.log.link": "Log",
-    "ui.chat.link": "Chat",
     "ui.clear.log": "Clear log",
     "ui.log.filters.block": "[<span id=\"filterIcon\">+</span>] Log Filters",
     "ui.pause": "pawse",
