--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -339,8 +339,8 @@
     "challendge.postApocalypse.flavor": "'Surely it's not that bad' they thought",
     "challendge.reservesReclaimed.msg": "Reserves were reclaimed!",
     "challendge.unicornTears.label": "Unicorn Tears",
-    "challendge.unicornTears.desc": "WIP",
-    "challendge.unicornTears.effect.desc": "WIP",
+    "challendge.unicornTears.desc": "Restart the game, except unicorn-related resources are required for many things, and storage space is limited.<br><br>Goal: Obtain one necrocorn.",
+    "challendge.unicornTears.effect.desc": "Unicorn Tombs increase max faith (scales with transcendence tiers). Reduce the ivory price ratio for Ziggurat religion.",
     "challendge.winterIsComing.label": "Winter Has Come",
     "challendge.winterIsComing.desc": "Restart the game with only winter seasons. (Catnip will not benefit from paragon production bonus)<br><br>Goal: Get to Helios.",
     "challendge.winterIsComing.effect.desc": "No more cold winters.",
@@ -630,6 +630,8 @@
     "effectsMgr.statics.zebraAppeasedGoldPenalty.title" : "Gold penalty",
     "effectsMgr.statics.zebraPreparations.title": "Zebra Preparation",
     "effectsMgr.statics.zebraRelationModifier.title" : "Zebra relations modifier",
+    "effectsMgr.statics.zigguratIvoryPriceRatio.title": "Ivory price ratio",
+    "effectsMgr.statics.zigguratIvoryCostIncrease.title": "Ivory base price",
     "effectsMgr.statics.zigguratTempleEffectPolicy.title" : "Ziggurat Order of the Sun effect",
     "effectsMgr.type.resConversion": "{0} conversion",
     "effectsMgr.type.resCraftRatio": "{0} craft effectiveness",
