--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -58,7 +58,7 @@
     "achievements.systemShock.title": "System Shock",
     "achievements.systemShock.desc": "I'm sorry Dave, I'm afraid I can't do that.",
     "achievements.theElderLegacy.title": "The Elder Legacy",
-    "achievements.theElderLegacy.desc": "Be a first player to test Kittens Game Mobile",
+    "achievements.theElderLegacy.desc": "Be one of the first players to test Kittens Game Mobile",
     "achievements.uberkatzhen.title": "Uberkatzchen",
     "achievements.uberkatzhen.desc": "What does not kill you makes you stronger",
     "achievements.uniception.title": "Uniception",
@@ -328,7 +328,7 @@
     "challendge.energy.desc": "Restart the game with consumption of energy multiply by 2.<br><br>Goal: Unlock all energy production buildings and build at least one of them.",
     "challendge.energy.effect.desc": "Production bonuses cuts caused by negative energy are divided by 2.",
     "challendge.ironWill.label": "Iron Will",
-    "challendge.ironWill.desc": "Iron Will is a bit hidden challenge and you don't need to click here to enable it: reset the game and play without kittens.",
+    "challendge.ironWill.desc": "Iron Will is a bit of a hidden challenge and you don't need to click here to enable it: reset the game and play without kittens.",
     "challendge.ironWill.effect.desc": "Nothing",
     "challendge.pacifism.label": "Pacifism",
     "challendge.pacifism.desc": "Restart the game without ability to hunt. Some policies are unavailable.<br><br>Goal: Research Space Treaty policy and reset.",
@@ -372,7 +372,7 @@
     "cycle.effects.title": "Cycle Effects",
     "cycle.effects.festival.title": "Cycle Festival Effects:",
 
-    "discardParagon.confirmation.msg1": "Are you sure that you want to discard all your paragon points? This action can not be undone.",
+    "discardParagon.confirmation.msg1": "Are you sure that you want to discard all your paragon points? This action cannot be undone.",
     "discardParagon.confirmation.msg2": "You have a lot of paragon points. Are you absolutely sure?",
     "discardParagon.confirmation.msgIW": "Warning! Burning paragon will break your Iron Will mode. Do you want to proceed?",
 
@@ -467,7 +467,7 @@
     "effectsMgr.statics.globalResourceRatio.title": "Max resources bonus",
     "effectsMgr.statics.goldCostReduction.title": "Reduction in gold cost",
     "effectsMgr.statics.happiness.title": "Happiness",
-    "effectsMgr.statics.hapinnessConsumptionRatio.title": "Happines consumption",
+    "effectsMgr.statics.hapinnessConsumptionRatio.title": "Happiness consumption",
     "effectsMgr.statics.happinessKittenProductionRatio.title" : "Kitten production from happiness",
     "effectsMgr.statics.harborCoalRatio.title": "Harbor coal expansion",
     "effectsMgr.statics.harborRatio.title": "Harbor ship expansion",
@@ -663,7 +663,7 @@
     "general.copy.to.clipboard.prompt": "Copy to clipboard: Ctrl+C, Enter",
     "general.food.advisor.text": "Food advisor: 'Your catnip supply is too low!'",
 
-    "iron.will.break.confirmation.msg": "This will end iron will. Are you sure?",
+    "iron.will.break.confirmation.msg": "This will end Iron Will. Are you sure?",
 
     "kittens.craft.confirmation.title": "Are you sure?",
     "kittens.craft.confirmation.msg": "Your kittens will DIE",
@@ -802,7 +802,7 @@
     "policy.communism.label" : "Communism",
     "policy.communism.desc" : "Industrialization at all costs. Increases production of coal, iron, and titanium, and makes factories cheaper.",
     "policy.conservation.label" : "Conservation",
-    "policy.conservation.desc" : "Keep actively protecting the environment, increasing happines from environment.",
+    "policy.conservation.desc" : "Keep actively protecting the environment, increasing happiness from environment.",
     "policy.culturalExchange.label" : "Cultural Exchange",
     "policy.culturalExchange.desc" : "Your poets and actors will travel to foreign lands, slightly increasing culture income.",
     "policy.diplomacy.label" : "Diplomacy",
@@ -1040,7 +1040,7 @@
     "religion.refineTearsBtn.refine.msg.failure": "Nothing happens",
     "religion.resetFaith.confirmation.msg": "Are you sure you want to reset the pool?\n\nYou will get a bonus to faith transfer based on your total amount of faith accumulated through praising.\n\nThis bonus will carry over through resets.\n\nCLICKING THIS BUTTON WILL ERASE ALL FAITH ACCUMULATED THROUGH PRAISING.",
     "religion.ru.apocripha.label": "Apocrypha",
-    "religion.ru.apocripha.desc": "Grants the ability to convert worship to epiphany, which improve effectiveness of praying",
+    "religion.ru.apocripha.desc": "Grants the ability to convert worship to epiphany, which improves the effectiveness of praying",
     "religion.ru.basilica.label": "Basilica",
     "religion.ru.basilica.desc": "Temples generate more culture and expand cultural limits",
     "religion.ru.goldenSpire.label": "Golden Spire",
@@ -1111,7 +1111,7 @@
     "religion.zu.ivoryTower.label": "Ivory Tower",
     "religion.zu.ivoryTower.desc": "Improves your unicorns generation by 10%, unlocks Unicorn Rifts",
     "religion.zu.marker.label": "Marker",
-    "religion.zu.marker.desc": "A strange structure made of unknown metal and serving unidentified purpose.",
+    "religion.zu.marker.desc": "A strange structure made of unknown metal and serving an unidentified purpose.",
     "religion.zu.marker.flavor": "A twisted spire points the way.",
     "religion.zu.skyPalace.label": "Sky Palace",
     "religion.zu.skyPalace.desc": "Improves your unicorns generation by 50%. There was a legend of ancient and mysterious beings living in this place long ago. Every Sky Palace level improves your total gold cap by 1%",
@@ -1830,7 +1830,7 @@
     "ui.option.notation": "Notation:",
     "ui.option.pollution": "Disable pollution effects",
 
-    "queue.alphabeticalToggle": "Sort queue items by alphabet",
+    "queue.alphabeticalToggle": "Sort queue items alphabetically",
 
     "left.resources": "resources",
     "left.resources.tip": "Ctrl+click resource to hide it, use gear icon for more settings.",
