Fix console warning at startup

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1022,7 +1022,7 @@
     "religion.pact.pactOfFanaticism.desc": "Great devotion requires great sacrifise!",
     "religion.pact.pactOfPurity.label": "Pact of Purity",
     "religion.pact.pactOfPurity.desc": "Purify the mortal plane, gaining insight into secrets of the universe and clearing reality from strains of darkness.",
-    "religion.pact.payDebt.label": "Pay the dept",
+    "religion.pact.payDebt.label": "Pay the debt",
     "religion.pact.payDebt.desc": "Get rid of Necrocorn Deficit by giving up enough necrocorns",
 	"religion.pact.fractured.label": "Fractured",
 	"religion.pact.fractured.desc": "You have broken the deal... now you will pay",
