Buff Technocracy: +5% AM, +2 queue

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -383,6 +383,7 @@
     "effectsMgr.statics.aiCoreUpgradeBonus.title" : "AI core synergies bonuses",
     "effectsMgr.statics.aiLevel.title": "AI Level",
     "effectsMgr.statics.alicornChance.title": "Alicorns descent chance",
+    "effectsMgr.statics.antimatterPolicyRatio.title": "Antimatter production bonus",
     "effectsMgr.statics.antimatterProduction.title": "Antimatter production",
     "effectsMgr.statics.arrivalSlowdown.title": "Arrival slowdown",
     "effectsMgr.statics.barnRatio.title": "Barn expansion",
