Rework Lizard Ecologists to use "phantom Magnetos"

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -190,6 +190,7 @@
     "buildings.lumberMill.flavor": "Best log analysing tool",
     "buildings.magneto.label": "Magneto",
     "buildings.magneto.desc": "Improves your total resource production by 2%. Every Steamworks will boost this effect by 15%. Consumes oil.",
+    "buildings.magneto.phantoms": "Up to {0} inactive Magnetos can contribute to the production bonus.",
     "buildings.mansion.label": "Mansion",
     "buildings.mansion.desc": "A spacy mansion (each has a space for 1 kitten)",
     "buildings.mansion.flavor": "The best shipping container available",
@@ -853,7 +854,7 @@
     "policy.lizardRelationsDiplomats.label" : "Lizard Relations: Diplomats",
     "policy.lizardRelationsDiplomats.desc" : "Lizards are a peaceful race. If you want to befriend the races of Cath, they are more than willing to contribute.<br>Each embassy with any race will now grant a 0.04% culture bonus, up to 15%.",
     "policy.lizardRelationsEcologists.label" : "Lizard Relations: Ecologists",
-    "policy.lizardRelationsEcologists.desc" : "The lizards love nature and want to protect it. Their ecologists are experts on preventing pollution and at low pollution levels they can tune some of your green energy buildings, increasing their effectiveness.",
+    "policy.lizardRelationsEcologists.desc" : "The lizards love nature and want to protect it. Their ecologists are experts on operating green energy buildings. Depending on how many Hydro Plants are active, some of your Magnetos will still boost resource production even if turned off.",
     "policy.lizardRelationsPriests.label" : "Lizard Relations: Priests",
     "policy.lizardRelationsPriests.desc" : "The lizards share the kittens' love of the sun. Their priests would be happy to help The Order of the Sun.<br>Manuscripts will grant a small bonus to faith.",
     "policy.openWoodlands.label" : "Open Woodlands",
