Improve workshop crafting speed tooltip

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -2190,8 +2190,9 @@
     "workshop.concreteWarehouses.label": "Concrete Warehouses",
     "workshop.concreteWarehouses.desc": "Storage facilities store 35% more resources",
     "workshop.craft.effectiveness": "Craft effectiveness: +{0}%",
-    "workshop.craftBtn.desc.countdown": "One craft every: {0}sec",
+    "workshop.craftBtn.desc.countdown": "One craft every: {0} sec",
     "workshop.craftBtn.desc.craftRatio": "Engineers expertise",
+    "workshop.craftBtn.desc.craftsPerSecond": "{0} crafts per second",
     "workshop.craftBtn.desc.effectivenessBonus": "Craft effectiveness bonus: +{0}%",
     "workshop.craftBtn.desc.progressHandicap": "Craft difficulty",
     "workshop.craftBtn.desc.tier": "Engineer's optimal rank",
