Fix misspelling in PA description

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -335,7 +335,7 @@
     "challendge.pacifism.effect.desc": "You gain improved trade based on trade posts.",
     "challendge.postApocalypse.label": "Post Apocalypse",
     "challendge.postApocalypse.desc": "You found a broken timeline with extreme pollution. You can send your strongest kittens to clear this mess. Pollution has more negative effects. <br>WARNING: you have limited time to establish food production after starting this challenge.",
-    "challendge.postApocalypse.effect.desc": "Increases amount of cryochaimbers that can be operational. Unlocks special policies for this run.",
+    "challendge.postApocalypse.effect.desc": "Increases amount of cryochambers that can be operational. Unlocks special policies for this run.",
     "challendge.postApocalypse.flavor": "'Surely it's not that bad' they thought",
     "challendge.reservesReclaimed.msg": "Reserves were reclaimed!",
     "challendge.unicornTears.label": "Unicorn Tears",
