--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -515,6 +515,7 @@
     "effectsMgr.statics.mysticismBonus.title" : "Mysticism Bonus",
     "effectsMgr.statics.nagaBlueprintTradeChance.title": "Naga blueprint trade chance",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Necrocorn consumption",
+    "effectsMgr.statics.neutralRaceEmbassyStanding.title": "Embassy's standing ratio",
     "effectsMgr.statics.nextHashLevelAt.title": "Next hashrate level at",
     "effectsMgr.statics.nonZebraRelationModifier.title" : "Non-zebra relations modifier",
     "effectsMgr.statics.observatoryRatio.title": "Observatory science bonus",
@@ -851,7 +852,7 @@
     "policy.necrocracy.label" : "Necrocracy",
     "policy.necrocracy.desc" : "Your society offers itself to the elders, they will take over and bring dark times, but you will get a production bonus from BLS.",
     "policy.lizardRelationsDiplomats.label" : "Lizard Relations: Diplomats",
-    "policy.lizardRelationsDiplomats.desc" : "Lizards are a peaceful race. If you want to befriend the races of Cath, they are more than willing to contribute.<br>Each embassy with any race will now grant a 0.04% culture bonus, up to 15%.",
+    "policy.lizardRelationsDiplomats.desc" : "Lizards are a peaceful race. If you want to befriend the races of Cath, they are more than willing to contribute.<br>Embassies built with neutral races will have a small effect on their attitude towards your people. With enough bonuses, they may become friendly.",
     "policy.lizardRelationsEcologists.label" : "Lizard Relations: Ecologists",
     "policy.lizardRelationsEcologists.desc" : "The lizards love nature and want to protect it. Their ecologists are experts on preventing pollution and at low pollution levels they can tune some of your green energy buildings, increasing their effectiveness.",
     "policy.lizardRelationsPriests.label" : "Lizard Relations: Priests",
@@ -1683,6 +1684,7 @@
     "trade.attitude.friendly": "friendly",
     "trade.attitude.hostile": "hostile",
     "trade.attitude.neutral": "neutral",
+    "trade.attitude.nowFriendly": "now friendly",
     "trade.attitude.nowNeutral": "now neutral",
     "trade.cost": "Cost",
     "trade.effectiveness": "Trade effectiveness: +{0}%",
