Refactor necrocorn corruption to add details in the tooltip for each individual effect

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1153,9 +1153,13 @@
     "res.stack.bonusTransf": "Bonus Transferred",
     "res.stack.boost": "Boost",
     "res.stack.buildings": "Buildings",
+    "res.stack.corruptionExistPenalty": "Penalty",
+    "res.stack.corruptionFromMarkers": "Markers",
     "res.stack.corruptionPerDay": "Corruption",
     "res.stack.corruptionPerDayProduction": "Corruption production",
     "res.stack.corruptionPerDaySiphoned": "Siphoning consumption",
+    "res.stack.corruptionSorrowBonus": "Black Radiances",
+    "res.stack.pactsConsumption": "Pacts",
     "res.stack.policy": "Policy",
     "res.stack.pollution": "Pollution",
     "res.stack.convCons": "Conversion Consumption",
