Dev/beta -> Master merge (#113)
* Rework Temporal Paradox trigger mechanism to update in real-time

* Fix bug: "No void is generated on first day of temporal paradox"

* Added Foreign Policies: Relations

* spiderChemist effect placed in calculateEffects so
it only runs when it has to.
Unlock realtion tied to calculateEffects so MP
diplomacy can upgrade it and run it on load.
Race Standing requirement removed.
Added a few comments.

* Added Lizard diplomats, changed Nagas and sharks

* Added Shark Botanists and Merchants
Removed Shark Shipwrights
Change: Lizard Priests

* Shark Scribes buy double the iron.
Embassy requirement and policy costs adjusted.

* Added Naga Architects

* Changed two policies

Changed Dragon Astrologers and Lizard Ecologists.
Removed some unused code.

* Added Spider Paleontologists

- Added Spider Paleontologists
- Changed Spider Geologists
- Nerfed Griffin Machinists

* Improved relation descriptions

* Bug fixes

* Add new policy: Scientific Communism

* fix to holy genocide production multiplier

Originally was supposed to be a linear uncapped increase, but it had a LDR limiting it to a 2x boost

* Balance changes

-  Spider Geologists are now based on embassies
- Shark Botanists refine bonus in IW is now instead wood bonus

* Fix the thing I broke in science.js

Fix error with meta being undefined--oopsie, that was my bad

* Balance changes

* Scaling policy changes

Spider Geologists and Lizard Diplomats no longer have a default bonus.
The description of policies scaling with embassies now includes the calculation.

* Policy description change

Changed two policy descriptions to second person, so they are line with all other policies.

* Relation description change

Changed the new relation policies to use second person.
Changed Ship potential bonus to Reactor Vessel bonus.

* Spider Chemist bug fix

When importing a save, spiders sold multiple instances of kerosene.

* Fix that bug where extra game-ticks would occur when the player cl

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -190,6 +190,7 @@
     "buildings.lumberMill.flavor": "Best log analysing tool",
     "buildings.magneto.label": "Magneto",
     "buildings.magneto.desc": "Improves your total resource production by 2%. Every Steamworks will boost this effect by 15%. Consumes oil.",
+    "buildings.magneto.phantoms": "Up to {0} inactive Magnetos can contribute to the production bonus.",
     "buildings.mansion.label": "Mansion",
     "buildings.mansion.desc": "A spacy mansion (each has a space for 1 kitten)",
     "buildings.mansion.flavor": "The best shipping container available",
@@ -335,7 +336,7 @@
     "challendge.pacifism.effect.desc": "You gain improved trade based on trade posts.",
     "challendge.postApocalypse.label": "Post Apocalypse",
     "challendge.postApocalypse.desc": "You found a broken timeline with extreme pollution. You can send your strongest kittens to clear this mess. Pollution has more negative effects. <br>WARNING: you have limited time to establish food production after starting this challenge.",
-    "challendge.postApocalypse.effect.desc": "Increases amount of cryochaimbers that can be operational. Unlocks special policies for this run.",
+    "challendge.postApocalypse.effect.desc": "Increases amount of cryochambers that can be operational. Unlocks special policies for this run.",
     "challendge.postApocalypse.flavor": "'Surely it's not that bad' they thought",
     "challendge.reservesReclaimed.msg": "Reserves were reclaimed!",
     "challendge.unicornTears.label": "Unicorn Tears",
@@ -383,6 +384,7 @@
     "effectsMgr.statics.aiCoreUpgradeBonus.title" : "AI core synergies bonuses",
     "effectsMgr.statics.aiLevel.title": "AI Level",
     "effectsMgr.statics.alicornChance.title": "Alicorns descent chance",
+    "effectsMgr.statics.antimatterPolicyRatio.title": "Antimatter production bonus",
     "effectsMgr.statics.antimatterProduction.title": "Antimatter production",
     "effectsMgr.statics.arrivalSlowdown.title": "Arrival slowdown",
     "effectsMgr.statics.barnRatio.title": "Barn expansion",
@@ -514,6 +516,7 @@
     "effectsMgr.statics.mysticismBonus.title" : "Mysticism Bonus",
     "effectsMgr.statics.nagaBlueprintTradeChance.title": "Naga blueprint trade chance",
     "effectsMgr.statics.necrocornPerDay.pact.title": "Necrocorn consumption",
+    "effectsMgr.statics.neutralRaceEmbassyStanding.title": "Embassy's standing ratio",
     "effectsMgr.statics.nextHashLevelAt.title": "Next hashrate level at",
     "effectsMgr.statics.nonZebraRelationModifier.title" : "Non-zebra relations modifier",
     "effectsMgr.statics.observatoryRatio.title": "Observatory science bonus",
@@ -850,9 +853,9 @@
     "policy.necrocracy.label" : "Necrocracy",
     "policy.necrocracy.desc" : "Your society offers itself to the elders, they will take over and bring dark times, but you will get a production bonus from BLS.",
     "policy.lizardRelationsDiplomats.label" : "Lizard Relations: Diplomats",
-    "policy.lizardRelationsDiplomats.desc" : "Lizards are a peaceful race. If you want to befriend the races of Cath, they are more than willing to contribute.<br>Each embassy with any race will now grant a 0.04% culture bonus, up to 15%.",
+    "policy.lizardRelationsDiplomats.desc" : "Lizards are a peaceful race. If you want to befriend the races of Cath, they are more than willing to contribute.<br>Embassies built with neutral races will have a small effect on their attitude towards your people. With enough bonuses, they may become friendly.",
     "policy.lizardRelationsEcologists.label" : "Lizard Relations: Ecologists",
-    "policy.lizardRelationsEcologists.desc" : "The lizards love nature and want to protect it. Their ecologists are experts on preventing pollution and at low pollution levels they can tune some of your green energy buildings, increasing their effectiveness.",
+    "policy.lizardRelationsEcologists.desc" : "The lizards love nature and want to protect it. Their ecologists are experts on operating green energy buildings. Depending on how many Hydro Plants are active, some of your Magnetos will still boost resource production even if turned off.",
     "policy.lizardRelationsPriests.label" : "Lizard Relations: Priests",
     "policy.lizardRelationsPriests.desc" : "The lizards share the kittens' love of the sun. Their priests would be happy to help The Order of the Sun.<br>Manuscripts will grant a small bonus to faith.",
     "policy.openWoodlands.label" : "Open Woodlands",
@@ -876,7 +879,7 @@
     "policy.sharkRelationsMerchants.label" : "Shark Relations: Merchants",
     "policy.sharkRelationsMerchants.desc" : "The sharks are experts of traveling through water, but not so much on land. Work together with their merchants to discover and share trade routes through water and land.<br>The more you trade, the more effective it becomes",
     "policy.siphoning.label" : "Siphoning",
-    "policy.siphoning.desc" : "Pacts consume alicorns and slow down corruption instead of consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
+    "policy.siphoning.desc" : "Pacts slow down necrocorn corruption and consume alicorns, instead of directly consuming necrocorns. Lack of alicorns or corruption is compensated by consuming necrocorns.",
     "policy.socialism.label" : "Socialism",
     "policy.socialism.desc" : "Has no effect",
     "policy.spaceBasedTerraforming.label" : "Space-based terraforming",
@@ -1682,6 +1685,7 @@
     "trade.attitude.friendly": "friendly",
     "trade.attitude.hostile": "hostile",
     "trade.attitude.neutral": "neutral",
+    "trade.attitude.nowFriendly": "now friendly",
     "trade.attitude.nowNeutral": "now neutral",
     "trade.cost": "Cost",
     "trade.effectiveness": "Trade effectiveness: +{0}%",
@@ -2190,13 +2194,15 @@
     "workshop.concreteWarehouses.label": "Concrete Warehouses",
     "workshop.concreteWarehouses.desc": "Storage facilities store 35% more resources",
     "workshop.craft.effectiveness": "Craft effectiveness: +{0}%",
-    "workshop.craftBtn.desc.countdown": "One craft every: {0}sec",
+    "workshop.craftBtn.desc.countdown": "One craft every: {0} sec",
     "workshop.craftBtn.desc.craftRatio": "Engineers expertise",
+    "workshop.craftBtn.desc.craftsPerSecond": "{0} crafts per second",
     "workshop.craftBtn.desc.effectivenessBonus": "Craft effectiveness bonus: +{0}%",
     "workshop.craftBtn.desc.progressHandicap": "Craft difficulty",
     "workshop.craftBtn.desc.tier": "Engineer's optimal rank",
     "workshop.craftPanel.label": "Crafting",
     "workshop.craftPanel.counts.label": "Stuff",
+    "workshop.craftPanel.consumption.label": "Engineer Consumption",
     "workshop.craftPanel.header.freeEngineers": "Free engineers",
     "workshop.craftPanel.header.tooltip": "You will gain one engineer slot per factory.<br>Every engineer can be assigned to the crafting job which they will perform automatically.",
     "workshop.crafted.msg": "+{0} {1} crafted",
