--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1631,6 +1631,8 @@
     "time.cfu.blastFurnace.label": "Chrono Furnace",
     "time.cfu.blastFurnace.desc": "Operates on chronoheat. Increases the maximum heat limit by 100.",
     "time.cfu.blastFurnace.desc2": "Automation skips one year into the future for each 100% of fuel consumed.",
+    "time.cfu.controlledDelay.label": "Delay",
+    "time.cfu.controlledDelay.desc": "Each one makes the Chrono Furnace wait an additional half-second before firing again.",
     "time.cfu.ressourceRetrieval.label": "Resource Retrieval",
     "time.cfu.ressourceRetrieval.desc": "Retrieve part of your yearly resources when you burn TC",
     "time.cfu.temporalAccelerator.label": "Temporal Accelerator",
@@ -1664,6 +1666,8 @@
     "time.shatter.tc.desc": "Destroy time crystals and unleash the stored temporal energy.<br> You will jump one year in the future. The price can increase over time.",
     "time.tc.shatter": "Temporal energy released, skipped {0} years",
     "time.tc.shatterOne": "Temporal energy released, skipped one year",
+    "time.use.heat": "Use Temporal Energy",
+    "time.use.heat.desc": "Use the fuel stored in your Chrono Furnace.<br> You will jump one year in the future for every 100% consumed.",
     "time.void": "Void",
     "time.vsu.chronocontrol.label": "Chronocontrol",
     "time.vsu.chronocontrol.desc": "Increase the duration of Temporal Paradox",
@@ -2173,6 +2177,12 @@
     "workshop.cargoShips.flavor": "It's like a tuna can, but bigger",
     "workshop.celestialMechanics.label": "Celestial Mechanics",
     "workshop.celestialMechanics.desc": "Celestial events and meteors will generate additional science",
+    "workshop.chronoEncabulator.label": "Chrono Encabulator",
+    "workshop.chronoEncabulator.desc": "Unlock additional automation tools to control the chronoforge.",
+    "workshop.chronoEncabulator.flavor.0": "It's also capable of automatically synchronizing cardinal grammeters.",
+    "workshop.chronoEncabulator.flavor.1": "Please note the complete absence of side fumbling.",
+    "workshop.chronoEncabulator.flavor.2": "The main winding is of the normal lotus-o-delta type placed in panendermic semi-boloid slots of the stator.",
+    "workshop.chronoEncabulator.flavor.3": "The chrono encabulator has now reached a high level of development, and it's being successfully used in the operation of hoglatrunnions.",
     "workshop.chronoEngineers.label": "Chronoengineers",
     "workshop.chronoEngineers.desc": "Improves Engineer's effectiveness and make them work during time skip",
     "workshop.chronoforge.label": "Chronoforge",
