--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1809,7 +1809,7 @@
     "ui.option.hide.downgrade": "Hide 'downgrade' buttons",
     "ui.option.hide.bgimage": "Hide background image <i>(for color schemes where applicable)</i>",
     "ui.option.tooltips.right": "Move tooltips in right column",
-    "ui.option.more": "More..",
+    "ui.option.more": "More...",
     "ui.option.no.confirm": "Do not confirm when clearing all jobs, researching policy, upgrading buildings, or when buying or selling all (Shift-click)",
     "ui.option.iw.smelter": "Smelters turn off at 95% max Iron in Iron Will mode",
     "ui.option.disable.telemetry": "Disable game telemetry",
@@ -1818,6 +1818,7 @@
     "ui.option.batch.size": "Batch size of Ctrl-click",
     "ui.option.force.lz": "Always compress in-memory save, in UTF-16 <i>(experimental)</i>",
     "ui.option.compress.savefile": "Compress exported save file <i>(experimental)<br>\nWARNING: it generates save files that are NOT COMPATIBLE with older versions.</i>",
+    "ui.option.dev.mode.only": "(Only available in Dev Mode)",
     "ui.option.export.button": "Export",
     "ui.option.import.button": "Import",
     "ui.option.export": "Export To:",
