Add automation for Controlled Delay

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1631,8 +1631,9 @@
     "time.cfu.blastFurnace.label": "Chrono Furnace",
     "time.cfu.blastFurnace.desc": "Operates on chronoheat. Increases the maximum heat limit by 100.",
     "time.cfu.blastFurnace.desc2": "Automation skips one year into the future for each 100% of fuel consumed.",
-    "time.cfu.controlledDelay.label": "Delay",
-    "time.cfu.controlledDelay.desc": "Each one makes the Chrono Furnace wait an additional half-second before firing again.",
+    "time.cfu.controlledDelay.label": "Controlled Delay",
+    "time.cfu.controlledDelay.desc": "Each one makes the Chrono Furnace wait 0.2 seconds before firing again.",
+    "time.cfu.controlledDelay.desc2": "Toggling automation has no gameplay effect.",
     "time.cfu.ressourceRetrieval.label": "Resource Retrieval",
     "time.cfu.ressourceRetrieval.desc": "Retrieve part of your yearly resources when you burn TC",
     "time.cfu.temporalAccelerator.label": "Temporal Accelerator",
@@ -2178,7 +2179,7 @@
     "workshop.celestialMechanics.label": "Celestial Mechanics",
     "workshop.celestialMechanics.desc": "Celestial events and meteors will generate additional science",
     "workshop.chronoEncabulator.label": "Chrono Encabulator",
-    "workshop.chronoEncabulator.desc": "Unlock additional automation tools to control the chronoforge.",
+    "workshop.chronoEncabulator.desc": "Unlock additional automation tools to control the Chronoforge.",
     "workshop.chronoEncabulator.flavor.0": "It's also capable of automatically synchronizing cardinal grammeters.",
     "workshop.chronoEncabulator.flavor.1": "Please note the complete absence of side fumbling.",
     "workshop.chronoEncabulator.flavor.2": "The main winding is of the normal lotus-o-delta type placed in panendermic semi-boloid slots of the stator.",
