--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -1208,6 +1208,7 @@
     "reset.confirmation.msg35": "You will receive NO BONUS points. You will save old bonus points and achievements.",
     "reset.confirmation.msg60": "You will receive extra happiness bonus.",
     "reset.confirmation.msg70": "You will receive extra happiness and bonus to production.",
+    "reset.confirmation.stored.chrono.fuel": "The Chrono Furnace has a lot of fuel left, which will be wasted if you reset now.",
 
     "resources.alicorn.title": "alicorns",
     "resources.alloy.title": "alloy",
