Rename Chrono Encabulator to Tachyon Moderator

--- a/res/i18n/en.json
+++ b/res/i18n/en.json
@@ -2179,12 +2179,6 @@
     "workshop.cargoShips.flavor": "It's like a tuna can, but bigger",
     "workshop.celestialMechanics.label": "Celestial Mechanics",
     "workshop.celestialMechanics.desc": "Celestial events and meteors will generate additional science",
-    "workshop.chronoEncabulator.label": "Chrono Encabulator",
-    "workshop.chronoEncabulator.desc": "Unlock additional automation tools to control the Chronoforge.",
-    "workshop.chronoEncabulator.flavor.0": "It's also capable of automatically synchronizing cardinal grammeters.",
-    "workshop.chronoEncabulator.flavor.1": "Please note the complete absence of side fumbling.",
-    "workshop.chronoEncabulator.flavor.2": "The main winding is of the normal lotus-o-delta type placed in panendermic semi-boloid slots of the stator.",
-    "workshop.chronoEncabulator.flavor.3": "The chrono encabulator has now reached a high level of development, and it's being successfully used in the operation of hoglatrunnions.",
     "workshop.chronoEngineers.label": "Chronoengineers",
     "workshop.chronoEngineers.desc": "Improves Engineer's effectiveness and make them work during time skip",
     "workshop.chronoforge.label": "Chronoforge",
@@ -2434,6 +2428,9 @@
     "workshop.strenghtenBuild.desc": "Repair Barn and Warehouse cracks with concrete.",
     "workshop.tachyonAccelerators.label": "Tachyon Accelerators",
     "workshop.tachyonAccelerators.desc": "Energy Rifts are 5 times as effective",
+    "workshop.tachyonModerator.label": "Tachyon Moderator",
+    "workshop.tachyonModerator.desc": "Unlocks more advanced tools to control the Chronoforge, such as pausing in between timeskips.",
+    "workshop.tachyonModerator.flavor": "It's also capable of automatically synchronizing cardinal grammeters.",
     "workshop.thinFilm.label": "Thin Film Cells",
     "workshop.thinFilm.desc": "Solar Panels are slightly more effective in winter",
     "workshop.thoriumEngine.label": "Thorium Drive",
